@startuml RTES_Class_Diagram

title RTES Core Classes

' Core Types
class Order {
    + OrderID id
    + ClientID client_id
    + BoundedString<8> symbol
    + Side side
    + OrderType type
    + Quantity quantity
    + Quantity remaining_quantity
    + Price price
    + OrderStatus status
    + timestamp
}

class Trade {
    + TradeID id
    + OrderID buy_order_id
    + OrderID sell_order_id
    + BoundedString<8> symbol
    + Quantity quantity
    + Price price
    + timestamp
}

enum Side {
    BUY = 1
    SELL = 2
}

enum OrderType {
    MARKET = 1
    LIMIT = 2
}

enum OrderStatus {
    PENDING
    ACCEPTED
    REJECTED
    FILLED
    PARTIALLY_FILLED
    CANCELLED
}

' Protocol
class MessageHeader {
    + uint32_t type
    + uint32_t length
    + uint64_t sequence
    + uint64_t timestamp
    + uint32_t checksum
}

class NewOrderMessage {
    + MessageHeader header
    + uint64_t order_id
    + BoundedString<32> client_id
    + BoundedString<8> symbol
    + uint8_t side
    + uint64_t quantity
    + uint64_t price
    + uint8_t order_type
}

class ProtocolUtils {
    + {static} calculate_checksum()
    + {static} validate_checksum()
    + {static} set_checksum()
    + {static} get_timestamp_ns()
}

' Memory Management
class "MemoryPool<T>" as MemoryPool {
    - capacity_: size_t
    - pool_: vector<T>
    - free_list_: vector<size_t>
    - free_count_: atomic<size_t>
    --
    + allocate(): T*
    + deallocate(T*)
    + available(): size_t
}

class "OrderPool" as OrderPool

' Lock-Free Queues
class "SPSCQueue<T>" as SPSCQueue {
    - capacity_: size_t
    - buffer_: unique_ptr<T[]>
    - head_: atomic<size_t>
    - tail_: atomic<size_t>
    --
    + push(T): bool
    + pop(T&): bool
    + empty(): bool
}

class "MPMCQueue<T>" as MPMCQueue {
    - capacity_: size_t
    - buffer_: unique_ptr<Cell[]>
    - enqueue_pos_: atomic<size_t>
    - dequeue_pos_: atomic<size_t>
    --
    + push(T): bool
    + pop(T&): bool
}

' Core Components
class TcpGateway {
    - port_: uint16_t
    - risk_manager_: RiskManager*
    - order_pool_: OrderPool*
    - connections_: map<int, ClientConnection>
    - listen_fd_: FileDescriptor
    - epoll_fd_: FileDescriptor
    --
    + start()
    + stop()
    - acceptor_loop()
    - worker_loop()
    - handle_client_data()
    - process_message_safe()
}

class RiskManager {
    - config_: RiskConfig
    - input_queue_: SPSCQueue<RiskRequest>
    - matching_engines_: map<string, MatchingEngine*>
    - client_states_: map<ClientID, ClientRiskState>
    --
    + start()
    + stop()
    + submit_order(Order*): bool
    + submit_cancel(OrderID, ClientID): bool
    - run()
    - validate_new_order(): RiskResult
    - check_order_size(): bool
    - check_price_collar(): bool
    - check_credit_limit(): bool
}

class MatchingEngine {
    - symbol_: string
    - pool_: OrderPool&
    - book_: unique_ptr<OrderBook>
    - input_queue_: SPSCQueue<OrderRequest>
    - market_data_queue_: MPMCQueue<MarketDataEvent>*
    --
    + start()
    + stop()
    + submit_order(Order*): bool
    + cancel_order(OrderID, ClientID): bool
    - run()
    - process_new_order()
    - publish_trade()
    - publish_bbo_update()
}

class OrderBook {
    - symbol_: string
    - pool_: OrderPool&
    - bids_: map<Price, PriceLevel>
    - asks_: map<Price, PriceLevel>
    - order_lookup_: unordered_map<OrderID, Order*>
    - trade_callback_: TradeCallback
    --
    + add_order(Order*): bool
    + cancel_order(OrderID): bool
    + best_bid(): Price
    + best_ask(): Price
    - match_order(Order*)
    - match_limit_order(Order*)
    - execute_trade()
}

class PriceLevel {
    + price: Price
    + orders: deque<Order*>
    + total_quantity: Quantity
}

class Exchange {
    - config_: unique_ptr<Config>
    - order_pool_: unique_ptr<OrderPool>
    - risk_manager_: unique_ptr<RiskManager>
    - matching_engines_: map<string, MatchingEngine>
    - market_data_queue_: unique_ptr<MPMCQueue>
    --
    + start()
    + stop()
}

' Relationships
Order --> Side
Order --> OrderType
Order --> OrderStatus

NewOrderMessage --> MessageHeader
NewOrderMessage ..> ProtocolUtils : validates

OrderPool --|> MemoryPool

TcpGateway --> OrderPool : allocates
TcpGateway --> RiskManager : submits
TcpGateway --> SPSCQueue : pushes

RiskManager --> SPSCQueue : pops
RiskManager --> MatchingEngine : routes

MatchingEngine --> SPSCQueue : pops
MatchingEngine --> OrderBook : manages
MatchingEngine --> MPMCQueue : publishes

OrderBook --> PriceLevel : contains
OrderBook --> Order : manages
OrderBook --> Trade : creates
OrderBook --> OrderPool : deallocates

Exchange --> TcpGateway : owns
Exchange --> RiskManager : owns
Exchange --> MatchingEngine : owns
Exchange --> OrderPool : owns

note right of SPSCQueue
  **Lock-Free SPSC**
  • Single Producer
  • Single Consumer
  • Ring buffer
  • Atomic head/tail
  • Cache-line aligned
end note

note right of OrderBook
  **Price-Time Priority**
  • Bids: descending
  • Asks: ascending
  • FIFO within price
  • O(1) cancel lookup
  • Cache prefetching
end note

@enduml
